Correct visibility of header in player mode

--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -32,7 +32,6 @@ body {
 
 .header {
     height: 80px;
-    z-index: 12;
     position: relative;
     background: #000;
 
